feat(chest-shop): Add BuildListener for build events
- Added BuildListener to handle build events in the ChestShop plugin.
- Updated onEnable method to initialize the BuildListener.
- Improved logging messages for plugin enable and disable actions.