@@ -2,7 +2,6 @@ package com.spygstudios.chestshop.commands.admin;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.bukkit.OfflinePlayer;
 import org.bukkit.block.Chest;
@@ -16,6 +15,7 @@ import com.spygstudios.spyglib.components.ComponentUtils;
 import com.spygstudios.spyglib.inventory.InventoryUtils;
 
 import dev.rollczi.litecommands.annotations.argument.Arg;
+import dev.rollczi.litecommands.annotations.async.Async;
 import dev.rollczi.litecommands.annotations.command.Command;
 import dev.rollczi.litecommands.annotations.context.Context;
 import dev.rollczi.litecommands.annotations.execute.Execute;
@@ -28,8 +28,8 @@ import net.kyori.adventure.text.event.HoverEvent;
 public class ShopListAdmin {
 
     @Execute
-    @Permission({ "spygchestshop.admin.list", "spygchestshop.admin" })
-    public void onList(@Context Player player, @Arg OfflinePlayer target, @OptionalArg Integer page) {
+    @Permission("spygchestshop.admin.list")
+    public void onList(@Context Player player, @Async @Arg OfflinePlayer target, @OptionalArg Integer page) {
         if (page == null) {
             page = 1;
         }
@@ -41,7 +41,7 @@ public class ShopListAdmin {
         }
 
         player.sendMessage(ComponentUtils.replaceComponent(Message.ADMIN_SHOP_LIST_HEAD.get(), "%player-name%", target.getName()));
-        List<Shop> shops = Shop.getShops(target.getUniqueId()).stream().sorted((s1, s2) -> s1.getName().compareTo(s2.getName())).skip((page - 1) * 10).limit(10).collect(Collectors.toList());
+        List<Shop> shops = Shop.getShops(target.getUniqueId()).stream().sorted((s1, s2) -> s1.getName().compareTo(s2.getName())).skip((page - 1) * 10L).limit(10).toList();
         for (Shop shop : shops) {
             Chest chest = (Chest) shop.getChestLocation().getBlock().getState();
             String itemsLeft = String.valueOf(InventoryUtils.countItems(chest.getInventory(), shop.getMaterial()));
